# LearnOpengl

./: CMakeLists.txt
includes/assimp/: defs.h
includes/freetype/: freetype.h
includes/irrKlang/: ik_IRefCounted.h  irrKlang.h
src/Basic/01PlayWindow/: playwindow.cpp
src/Basic/02DrawTriangle/: draw_triangle.cpp
src/Basic/03DrawQuad/: draw_quad.cpp
src/Basic/04Shader/: simple.fs  simple.vs  use_shader.cpp
src/Basic/05Texture/: draw_texture.cpp  simple.vs
src/Basic/06Transform/: simple.fs  simple.vs  use_transform.cpp
src/Basic/07MVPTransform/: mvp_transform.cpp
src/Basic/08Camera/: custom_camera.cpp  simple.vs
src/LoadModel/01LoadModel/: loadModel.cpp
